--- a/account-service.yaml
+++ b/account-service.yaml
@@ -1,1 +1,4 @@
-
+port: 8082
+discovery: #tells about the Eureka server details and its refresh time
+  server:
+    url: http://localhost:8081/eureka/
