--- a/event-service.yaml
+++ b/event-service.yaml
@@ -1,1 +1,4 @@
-
+port: 8083
+discovery: #tells about the Eureka server details and its refresh time
+  server:
+    url: http://localhost:8081/eureka/
